2013-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Delay.x3dv:
	* Rotor.x3dv:
	* RoundedRectangle2D.x3dv: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Torus.x3dv:
	* Externproto.x3dv: 

2013-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl: 

2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>

	* info.wrl:
	* OutlineEditor.h:
	* OutlineEditor.cpp:
	* OutlineTreeModel.h:
	* X3DOutlineTreeView.h:
	* OutlineTreeModel.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp:
	* OutlineCellRenderer.h:
	* OutlineCellRenderer.cpp: 

2013-10-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserWidget.cpp: 

2013-10-13  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserWidget.h:
	* X3DBrowserWidget.cpp:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp: 

2013-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui: 

2013-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* BrowserWindow.cpp: 

2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* BrowserWindow.ui:
	* lena.jpg:
	* Background.x3dv:
	* lostvalley_up.jpg:
	* lostvalley_down.jpg:
	* lostvalley_west.jpg:
	* lostvalley_east.jpg:
	* lostvalley_south.jpg:
	* lostvalley_north.jpg:
	* Background.x3dv:
	* lostvalley_up.jpg:
	* ComposedCubeMapTexture.x3dv:
	* lostvalley_east.jpg:
	* lostvalley_down.jpg:
	* lostvalley_west.jpg:
	* lostvalley_south.jpg:
	* lostvalley_north.jpg:
	* ComposedCubeMapTexture.x3dv: 

2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* main.cpp: 

2013-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.cpp: 

2013-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.cpp: 

2013-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* UndoStep.h:
	* UndoGroup.h: