@@ -1,3 +1,7 @@
+2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* BrowserWindow.cpp: 
+
 2013-10-18  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DOutlineTreeView.cpp:
